--- a/Capstone_Prelim_Analysis.ipynb
+++ b/Capstone_Prelim_Analysis.ipynb
@@ -79,16 +79,7 @@
     "\n",
     "# Read remaining datasets\n",
     "airport_df = pd.read_csv('airport-codes_csv.csv', nrows=1000)\n",
-    "city_df = pd.read_csv('us-cities-demographics.csv', delimiter=';', nrows=1000)\n",
-    "\n",
-    "# set connection string and configurations database\n",
-    "#conn_string = 'postgresql://capstone_user:capstone_pw@localhost:5432/capstone'\n",
-    "#conn = psycopg2.connect(conn_string)\n",
-    "#conn.set_session(autocommit=True)\n",
-    "#cur = conn.cursor()\n",
-    "\n",
-    "#conn = psycopg2.connect(\"host=127.0.0.1 dbname=sparkifydb user=student password=student\")\n",
-    "#cur = conn.cursor()"
+    "city_df = pd.read_csv('us-cities-demographics.csv', delimiter=';', nrows=1000)"
    ]
   },
   {
@@ -346,7 +337,7 @@
    ],
    "source": [
     "# Evaluate immigration import\n",
-    "im_df.head()\n"
+    "im_df.head()"
    ]
   },
   {
@@ -1517,18 +1508,6 @@
    },
    "outputs": [],
    "source": [
-    "# City level count checks\n",
-    "#city_df.groupby(['City'])['Total Population'].sum().sort_values(ascending = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
     "city_df.groupby(['State'])['Total Population'].sum().sort_values(ascending = False)"
    ]
   },
@@ -2109,282 +2088,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "editable": true
    },
    "source": [
-    "#### 3.2 Mapping Out Data Pipelines\n",
-    "List the steps necessary to pipeline the data into the chosen data model"
+    "# Reference Capstone_Modularized.ipynb for remaining steps"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "Steps necessary to pipeline data into the chosen model:\n",
-    "1. Load data\n",
-    "2. Clean data\n",
-    "3. Drop blank columns\n",
-    "4. Update column names\n",
-    "5. Update data types\n",
-    "6. Convert to spark -> create schema and dataframe, write dataframe to table\n",
-    "\n",
-    "After creating table, run a validation and quality check."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "### Step 4: Run Pipelines to Model the Data \n",
-    "#### 4.1 Create the data model\n",
-    "Build the data pipelines to create the data model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "#### 4.2 Data Quality Checks\n",
-    "Explain the data quality checks you'll perform to ensure the pipeline ran as expected. These could include:\n",
-    " * Integrity constraints on the relational database (e.g., unique key, data type, etc.)\n",
-    " * Unit tests for the scripts to ensure they are doing the right thing\n",
-    " * Source/Count checks to ensure completeness\n",
-    " \n",
-    "Run Quality Checks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# Perform quality checks here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "#### 4.3 Data dictionary \n",
-    "Create a data dictionary for your data model. For each field, provide a brief description of what the data is and where it came from. You can include the data dictionary in the notebook or in a separate file."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "#### Step 5: Complete Project Write Up\n",
-    "* Clearly state the rationale for the choice of tools and technologies for the project.\n",
-    "* Propose how often the data should be updated and why.\n",
-    "* Write a description of how you would approach the problem differently under the following scenarios:\n",
-    " * The data was increased by 100x.\n",
-    " * The data populates a dashboard that must be updated on a daily basis by 7am every day.\n",
-    " * The database needed to be accessed by 100+ people."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
